--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </main>
 
     <footer>
-        <p>© Asamblea de los Testigos de Jehová</p>
+        <p>© Asamblea Regional del 2025 - La Punta</p>
     </footer>
 
     <script>
