--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
         <div class="menu-toggle" id="menu-toggle">☰</div>
         <ul id="menu-list">
             <li><a href="#como-llegar">Cómo llegar</a></li>
-            <li><a href="#mapa">Mapa de Departamentos</a></li>
             <li><a href="#alojamiento">Lista de Alojamiento</a></li>
             <li><a href="#interes">Lugares de Interés</a></li>
+            <li><a href="#utiles">Archivos útiles</a></li>
+            
+            *utilizar _li><a href="#mapa">Mapa de Departamentos</a></li_*
         </ul>
     </nav>
 
@@ -50,11 +52,11 @@
         </div>
     </section>
 
-
-    <section id="mapa">
-        <h2>Mapa de Departamentos</h2>
-        <p>Mapa interactivo con las ubicaciones de los departamentos funcionales.</p>
-    </section>
+*utilizar cuando esté listo el mapa*
+    _section id="mapa">
+        h2>Mapa de Departamentos</h2>
+        p>Mapa interactivo con las ubicaciones de los departamentos funcionales.</p>
+    /section>
 
     <section id="alojamiento">
         <h2>Lista de Alojamiento</h2>
@@ -62,6 +64,11 @@
     </section>
 
     <section id="interes">
+        <h2>Lugares de Interés</h2>
+        <p>Sitios útiles y turísticos en la ciudad anfitriona.</p>
+    </section>
+
+    <section id="utiles">
         <h2>Lugares de Interés</h2>
         <p>Sitios útiles y turísticos en la ciudad anfitriona.</p>
     </section>
