--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
             <li><a href="#alojamiento">Lista de Alojamiento</a></li>
             <li><a href="#interes">Lugares de Interés</a></li>
             <li><a href="#utiles">Archivos útiles</a></li>
-            
-            *utilizar _li><a href="#mapa">Mapa de Departamentos</a></li_*
         </ul>
     </nav>
 
@@ -54,8 +52,8 @@
 
 *utilizar cuando esté listo el mapa*
     _section id="mapa">
-        h2>Mapa de Departamentos</h2>
-        p>Mapa interactivo con las ubicaciones de los departamentos funcionales.</p>
+        h2>Mapa de Departamentos</h2
+        p>Mapa interactivo con las ubicaciones de los departamentos funcionales.</p
     /section>
 
     <section id="alojamiento">
@@ -69,8 +67,8 @@
     </section>
 
     <section id="utiles">
-        <h2>Lugares de Interés</h2>
-        <p>Sitios útiles y turísticos en la ciudad anfitriona.</p>
+        <h2>Archivos útiles</h2>
+        <p> Aqui podrás descargar archivos útiles cómo el programa de la asamblea, etc.</p>
     </section>
 
 </main>
