--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
     </section>
 
 *utilizar cuando esté listo el mapa*
-    _section id="mapa">
+    <section id="mapa">
         h2>Mapa de Departamentos</h2
-        p>Mapa interactivo con las ubicaciones de los departamentos funcionales.</p
-    /section>
+        <p><a href="plano.html" target="_blank">Ver plano del lugar</a></p>
+    </section>
 
     <section id="alojamiento">
         <h2>Lista de Alojamiento</h2>
